--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "engines": {
     "node": "16.13.x"
   },
+  "scripts": {
+    "start": "node server.js"
+  },
   "dependencies": {
     "body-parser": "^1.18.3",
     "clone": "^2.1.1",
